# Trace

./: .gitignore  README.md  ios.README.md  plot_recent.py  pyproject.toml
Trace/: ContentView.swift  Persistence.swift  Trace-Info.plist  TraceApp.swift
Trace.xcodeproj/: project.pbxproj
Trace.xcodeproj/project.xcworkspace/xcuserdata/mnalavadi.xcuserdatad/: UserInterfaceState.xcuserstate
Trace.xcodeproj/xcshareddata/xcschemes/: Trace.xcscheme  TraceWidgetsExtension.xcscheme
Trace.xcodeproj/xcuserdata/mnalavadi.xcuserdatad/xcschemes/: xcschememanagement.plist
Trace/Models/: DailyStats.swift  FlatSample.swift  HealthKitTypeCatalog.swift  TraceActivityAttributes.swift
Trace/Services/: AudioManager.swift  FileManager.swift  HealthManager.swift  HealthSyncManager.swift  LocationManager.swift  ServerAPIManager.swift
Trace/Trace.xcdatamodeld/: .xccurrentversion
Trace/Trace.xcdatamodeld/Trace.xcdatamodel/: contents
Trace/Utils/: LoggerUtil.swift  MotionTypeDisplay.swift  StatsFormatting.swift
Trace/Views/: SettingsView.swift  StatsView.swift
TraceWidgets/: TraceWidgets.swift  TraceWidgetsBundle.swift  TraceWidgetsLiveActivity.swift
